Fix full alignment on smaller screens

--- a/sass/modules/_alignments.scss
+++ b/sass/modules/_alignments.scss
@@ -15,13 +15,10 @@
 	@include center-block;
 }
 
-.alignfull,
-.alignwide {
-	@media (min-width: $size__width--post) {
-		width: 100vw;
-		margin-left: calc(50% - 50vw);
-		max-width: none;
-	}
+.alignfull {
+	width: 100vw;
+	margin-left: calc(50% - 50vw);
+	max-width: none;
 
 	img {
 		width: 100%;
@@ -30,6 +27,16 @@
 
 .alignwide {
 	max-width: $size__width--main;
+
+	img {
+		width: 100%;
+	}
+
+	@media (min-width: $size__width--post) {
+		width: 100vw;
+		margin-left: calc(50% - 50vw);
+		max-width: none;
+	}
 
 	@media (min-width: $breakpoint-content-width) {
 		max-width: calc(100vw - #{spacing(2) * 2});
